# port-mcp

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml  version.yml
.omg/plans/: ralplan-e2e-selftest.md  ralplan-other-e2e-tests.md  ralplan-tcp-multiclient-listen.md
.omg/specs/: deep-interview-e2e-selftest.md  deep-interview-other-e2e-tests.md  deep-interview-tcp-multiclient-listen.md
docs/: 00-索引.md  01-初版工程功能设计大纲.md  01-当前工具与实现状态.md  02-进阶实现TODO.md  02-进阶实现大纲.md  03-初版工具契约.md  05-状态机与资源生命周期.md  06-并发与缓冲区设计.md  07-错误模型与返回格式.md  08-测试与验收计划.md  09-库选择与依赖决策.md  10-开发里程碑.md  11-配置与运行说明.md  13-代码施工大纲.md  15-M0-工程骨架施工记录.md  16-M1-模型与错误基线施工记录.md  17-初版施工任务拆分清单.md  18-M2-RuntimeRegistry与生命周期施工记录.md  19-M3-MockTransport与任务骨架施工记录.md  20-M4-队列缓冲区与订阅施工记录.md  21-M5-TCP-UDP-loopback施工记录.md  23-M7-MCP-server接入施工记录.md  24-MCP工具列表与调用收发详解.md  25-进阶能力施工拆分与验收门槛.md  26-TCP-UDP真实运行时契约与测试计划.md  27-VISA集成与工具契约扩展.md  28-GitHub-CI版本与发布自动化.md
docs/1.0.0文档归档/: 00-索引.md  03-初版工具契约.md  04-运行时架构设计.md  12-调试记录格式.md  13-代码施工大纲.md  14-M0-SDK与依赖复核记录.md  15-M0-工程骨架施工记录.md  16-M1-模型与错误基线施工记录.md  18-M2-RuntimeRegistry与生命周期施工记录.md  18-TypeScript-MCP-server-边界说明.md  22-M6-串口serialport接入施工记录.md  28-GitHub-CI版本与发布自动化.md
docs/acceptance/: 2026-05-26-M8-final-acceptance.md  2026-05-26-M9-architecture-file-split-acceptance.md
docs/bugfix/: 01-code-review-fixes.md
scripts/: next-version.ps1
src/: main.rs
src/app/: config_service.rs  device_probe.rs  instance_service.rs  mod.rs  port_service.rs  stream_service.rs
src/mcp/: mod.rs  (+4 more)
tests/: e2e_mcp_stdio_tcp_listen.rs
(+28 files in other folders)
