[package]
name = "port-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "1.7.0", features = ["server", "macros", "schemars", "transport-io"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "net", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
bytes = "1"
serialport = "4"
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }

[dev-dependencies]
rmcp = { version = "1.7.0", features = ["client"] }
