[package]
name = "port-mcp"
version = "1.1.1"
edition = "2024"

[dependencies]
rmcp = { version = "1.7.0", features = ["server", "macros", "schemars", "transport-io"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "net", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
bytes = "1"
serialport = "4"
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
regex = "1"
visa-rs = { version = "0.7.0-alpha.1", optional = true }

[features]
default = []
visa = ["dep:visa-rs"]

[dev-dependencies]
rmcp = { version = "1.7.0", features = ["client"] }
